--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ parameters:
 
 orbs:
   # Replace this with your own!
-  my-ip: rodossaenz/myip@<<pipeline.parameters.dev-orb-version>>
+  myip: rodossaenz/myip@<<pipeline.parameters.dev-orb-version>>
   orb-tools: circleci/orb-tools@10.0
 
 jobs:
@@ -30,7 +30,7 @@ jobs:
       # "greet" is a sample command packaged with this orb config.
       # This sample integration test will run as long as the greet command exists. Once you remove the greet command you should remove this line.
       # Push new changes first, before adding new tests to your config.
-      - my-ip/get
+      - myip/get
 
 workflows:
   publish-dev-workflow:
