--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,29 +17,36 @@ parameters:
 
 orbs:
   # Replace this with your own!
-  myip: rodossaenz/myip@<<pipeline.parameters.dev-orb-version>>
+  my-orb: rodossaenz/myip@<<pipeline.parameters.dev-orb-version>>
   orb-tools: circleci/orb-tools@10.0
 
 jobs:
-  # Define one or more jobs which will utilize your orb's commands and parameters to validate your changes.
+  initialize-orb:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - checkout
+      - run: circleci namespace $NAMESPACE $VCS_TYPE $VCS_ORG --no-prompt
+      - run: circleci orb create $NAMESPACE/$ORB_NAME --private --no-prompt
+      - run: circleci orb publish workspace/orb.yml $NAMESPACE/$ORB_NAME@<<pipeline.parameters.dev-orb-version>>
   integration-test-1:
     docker:
       - image: cimg/base:stable
     steps:
       - checkout
-      # "get" is a sample command packaged with this orb config.
-      # This sample integration test will run as long as the get command exists. Once you remove the greet command you should remove this line.
-      # Push new changes first, before adding new tests to your config.
-      - myip/get
+      - my-orb/get
 
 workflows:
   publish-dev-workflow:
     unless: << pipeline.parameters.run-integration-tests >>
     jobs:
-      - orb-tools/lint # Lint Yaml files
+      - initialize-orb
+      - orb-tools/lint:
+          requires:
+            - initialize-orb
       # Publish development version(s) of the orb.
       - orb-tools/publish-dev:
-          orb-name: rodossaenz/myip
+          orb-name: $NAMESPACE/$ORB_NAME
           checkout: true
           context: orb-publishing # A restricted context containing your private publishing credentials. Will only execute if approved by an authorized user.
           requires:
@@ -47,12 +54,11 @@ workflows:
       # Trigger an integration workflow to test the
       # dev:${CIRCLE_SHA1:0:7} version of your orb
       - orb-tools/trigger-integration-tests-workflow:
-          name: trigger-integration-dev
           context: orb-publishing
           requires:
             - orb-tools/publish-dev
 
-  # This `integration-test_deploy` workflow will only run
+  # This `integration-test-workflow` workflow will only run
   # when the run-integration-tests pipeline parameter is set to true.
   # It is meant to be triggered by the "trigger-integration-tests-workflow"
   # job, and run tests on <your orb>@dev:${CIRCLE_SHA1:0:7}.
@@ -61,4 +67,7 @@ workflows:
     jobs:
       # Run any integration tests defined within the `jobs` key.
       - integration-test-1
+      - my-orb/hello:
+          requires:
+            - integration-test-1
 
