--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - image: cimg/base:stable
     steps:
       - checkout
-      - run: circleci namespace $NAMESPACE $VCS_TYPE $VCS_ORG --no-prompt
+      - run: circleci namespace create $NAMESPACE $VCS_TYPE $VCS_ORG --no-prompt
       - run: circleci orb create $NAMESPACE/$ORB_NAME --private --no-prompt
       - run: circleci orb publish workspace/orb.yml $NAMESPACE/$ORB_NAME@<<pipeline.parameters.dev-orb-version>>
   integration-test-1:
