--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,12 +18,15 @@ parameters:
 orbs:
   # Replace this with your own!
   my-orb: rodossaenz/myip@<<pipeline.parameters.dev-orb-version>>
-  orb-tools: circleci/orb-tools@10.1.0
+  orb-tools: circleci/orb-tools@10.0
 
 jobs:
   initialize-orb:
-    executor: orb-tools/ubuntu
+    docker:
+      - image: cimg/base:stable
     steps:
+      - run: sudo su
+      - run: curl -fLSs https://raw.githubusercontent.com/CircleCI-Public/circleci-cli/master/install.sh | bash
       - checkout
       - run: circleci namespace create $NAMESPACE $VCS_TYPE $VCS_ORG --no-prompt
       - run: circleci orb create $NAMESPACE/$ORB_NAME --private --no-prompt
