--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,9 +29,15 @@ jobs:
       #- cli/install
       - cli/setup:
           token: CIRCLE_TOKEN
-      - run: bash -c "circleci namespace create $NAMESPACE $VCS_TYPE $VCS_ORG --no-prompt; if [[ \$? -eq 0 ]] ; then exit 1 ; else exit 0 ; fi"
-      - run: bash -c "circleci orb create $NAMESPACE/$ORB_NAME --private --no-prompt; if [[ \$? -eq 0 ]] ; then exit 1 ; else exit 0 ; fi"
-      - run: circleci orb publish workspace/orb.yml $NAMESPACE/$ORB_NAME@<<pipeline.parameters.dev-orb-version>>
+      - run: 
+          name: CircleCI Create Namespace
+          command: bash -c "circleci namespace create $NAMESPACE $VCS_TYPE $VCS_ORG --no-prompt; if [[ \$? -eq 0 ]] ; then exit 1 ; else exit 0 ; fi"
+      - run: 
+          name: CircleCI Create Private Orb
+          command: bash -c "circleci orb create $NAMESPACE/$ORB_NAME --private --no-prompt; if [[ \$? -eq 0 ]] ; then exit 1 ; else exit 0 ; fi"
+      - run: 
+          name: CircleCI Publish Orb Dev Version
+          command: circleci orb publish workspace/orb.yml $NAMESPACE/$ORB_NAME@<<pipeline.parameters.dev-orb-version>>
   integration-test-1:
     docker:
       - image: cimg/base:stable
